# CroissantVulkanRenderer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
assets/models/: gun.gltf
assets/models/MetalRoughSpheres/: MetalRoughSpheres.gltf
assets/models/damagedHelmet/: DamagedHelmet.gltf
assets/models/gun/: gun.gltf
assets/models/revolver/: revolver.gltf
assets/models/sponza/: Sponza.gltf
assets/skybox/Apartment/: Irradiance.hdr
assets/skybox/CountryClub/: Irradiance.hdr
assets/skybox/DaySky/: Irradiance.hdr
assets/skybox/Desert/: Irradiance.hdr
assets/skybox/NeonStudio/: Irradiance.hdr
assets/skybox/PowerPlant/: Irradiance.hdr
assets/skybox/Shangai/: Irradiance.hdr
assets/skybox/WinterForest/: Irradiance.hdr
include/CroissantRenderer/: Renderer.h
include/CroissantRenderer/Settings/: computePipelineConfig.h  config.h  graphicsPipelineConfig.h
include/VulkanToyRenderer/: Renderer.h
include/VulkanToyRenderer/Settings/: config.h  graphicsPipelineConfig.h  vLayersConfig.h  vkLayersConfig.h
libs/stb/: CMakeLists.txt
shaders/: BRDF.comp  CMakeLists.txt  light.frag  light.vert  normal.frag  normal.vert  prefilterEnvMap.frag  prefilterEnvMap.vert  scene.frag  scene.vert  shader.frag  shader.vert  shadowMap.vert  skybox.frag  skybox.vert
shaders/old/: phongShading.frag
src/CroissantRenderer/: main.cpp
src/CroissantRenderer/Buffer/: bufferManager.cpp  bufferManager.h  bufferUtils.cpp  bufferUtils.h
src/CroissantRenderer/Camera/: Camera.cpp  Camera.h
src/CroissantRenderer/Command/: CommandPool.cpp  CommandPool.h  commandManager.cpp  commandManager.h
src/CroissantRenderer/Computation/: Computation.cpp  Computation.h
src/CroissantRenderer/Descriptor/: DescriptorInfo.h  DescriptorPool.cpp  DescriptorSets.cpp  DescriptorSets.h  descriptorSetLayoutManager.cpp  descriptorSetLayoutManager.h
src/CroissantRenderer/Device/: Device.cpp  Device.h
src/CroissantRenderer/Features/: DepthBuffer.cpp  DepthBuffer.h  MSAA.cpp  MSAA.h  PrefilteredEnvMap.cpp  PrefilteredEnvMap.h  ShadowMap.cpp  ShadowMap.h  featuresUtils.cpp  featuresUtils.h
src/CroissantRenderer/Framebuffer/: framebufferManager.cpp
src/CroissantRenderer/GUI/: GUI.cpp  GUI.h
src/CroissantRenderer/Image/: Image.cpp  Image.h  imageManager.cpp  imageManager.h
src/CroissantRenderer/Math/: mathUtils.cpp
src/CroissantRenderer/Model/: Attributes.cpp  Mesh.h  Model.cpp  Model.h  ModelInfo.h
src/CroissantRenderer/Pipeline/: Compute.cpp  Compute.h  Graphics.cpp  Graphics.h  Pipeline.cpp  Pipeline.h
src/CroissantRenderer/Queue/: QueueFamilyHandles.cpp  QueueFamilyHandles.h  QueueFamilyIndices.cpp  QueueFamilyIndices.h  queueFamilyUtils.cpp  queueFamilyUtils.h
src/CroissantRenderer/RenderPass/: RenderPass.cpp  RenderPass.h  attachmentUtils.cpp  attachmentUtils.h  subPassUtils.cpp
src/CroissantRenderer/Renderer/: Renderer.cpp
src/CroissantRenderer/Scene/: Scene.cpp  Scene.h
src/CroissantRenderer/Shader/: shaderManager.cpp  shaderManager.h
src/CroissantRenderer/Swapchain/: Swapchain.cpp  Swapchain.h
src/CroissantRenderer/Texture/: Bitmap.cpp  Bitmap.h  Texture.cpp  Texture.h  cubemapUtils.cpp  cubemapUtils.h  mipmapUtils.cpp  mipmapUtils.h
src/CroissantRenderer/VKinstance/: VKinstance.cpp  VKinstance.h  extensionsUtils.cpp  extensionsUtils.h
src/CroissantRenderer/Window/: Window.cpp  Window.h
src/VulkanToyRenderer/: HelloTriangleApp.cpp  HelloTriangleApp.h  Renderer.cpp  main.cpp
src/VulkanToyRenderer/Buffer/: bufferManager.cpp  bufferManager.h  bufferUtils.cpp
src/VulkanToyRenderer/BufferManager/: bufferManager.cpp  bufferManager.h  bufferUtils.cpp
src/VulkanToyRenderer/Buffers/: bufferManager.cpp  bufferManager.h  bufferUtils.cpp  bufferUtils.h
src/VulkanToyRenderer/Camera/: Camera.cpp  Camera.h
src/VulkanToyRenderer/Command/: CommandPool.cpp  CommandPool.h  commandManager.cpp  commandManager.h
src/VulkanToyRenderer/Commands/: CommandManager.cpp  CommandManager.h  CommandPool.cpp  CommandPool.h  commandManager.cpp  commandUtils.cpp  commandUtils.h
src/VulkanToyRenderer/Computation/: Computation.cpp  Computation.h
src/VulkanToyRenderer/DepthBuffer/: DepthBuffer.cpp  DepthBuffer.h  depthUtils.cpp  depthUtils.h
src/VulkanToyRenderer/Descriptor/: DescriptorPool.cpp  DescriptorPool.h  DescriptorSets.cpp  DescriptorSets.h  descriptorSetLayoutManager.cpp  descriptorSetLayoutManager.h
src/VulkanToyRenderer/Descriptors/: DescriptorInfo.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSets.cpp  DescriptorSets.h  DescriptorTypes.h  UniformBufferObject.h  descriptorSetLayoutUtils.cpp  descriptorSetLayoutUtils.h  descriptorTypeUtils.cpp  descriptorTypeUtils.h
src/VulkanToyRenderer/Device/: Device.cpp  Device.h
src/VulkanToyRenderer/Extensions/: extensionsUtils.cpp
src/VulkanToyRenderer/Features/: DepthBuffer.cpp  DepthBuffer.h  MSAA.cpp  MSAA.h  PrefilteredEnvMap.cpp  PrefilteredEnvMap.h  ShadowMap.cpp  ShadowMap.h  featuresUtils.cpp  featuresUtils.h
src/VulkanToyRenderer/Framebuffer/: framebufferManager.cpp  framebufferManager.h  framebufferUtils.cpp  framebufferUtils.h
src/VulkanToyRenderer/GUI/: GUI.cpp  GUI.h
src/VulkanToyRenderer/GraphicsPipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipelineManager.cpp  GraphicsPipelineManager.h  renderTarget.cpp  renderTarget.h  renderTargetUtils.cpp  renderTargetUtils.h
src/VulkanToyRenderer/Image/: Image.cpp  Image.h  imageManager.cpp  imageManager.h
src/VulkanToyRenderer/Images/: Image.cpp  Image.h  imageManager.cpp  imageManager.h
src/VulkanToyRenderer/Math/: mathUtils.cpp  mathUtils.h
src/VulkanToyRenderer/MeshLoader/: Vertex.cpp  Vertex.h
src/VulkanToyRenderer/Model/: Attributes.cpp  Attributes.h  Mesh.h  Model.cpp  Model.h  ModelInfo.h  Vertex.cpp  Vertex.h
src/VulkanToyRenderer/Pipeline/: Compute.cpp  Compute.h  Graphics.cpp  Graphics.h  Pipeline.cpp  Pipeline.h
src/VulkanToyRenderer/Queue/: QueueFamilyHandles.cpp  QueueFamilyHandles.h  QueueFamilyIndices.cpp  queueFamilyUtils.cpp
src/VulkanToyRenderer/QueueFamily/: QueueFamilyHandles.cpp  (+7 more)
(+108 files in other folders)
